--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                         <i class="fas fa-pills me-2"></i>Find Medicines
                     </a>
                     {% if not current_user.is_authenticated %}
-                    <a href="{{ url_for('routes.register') }}" class="btn btn-success btn-lg px-4">
+                    <a href="{{ url_for('routes.register') }}" style="background-color: rgb(67,181,228); color:white; border-color: #0284c7;" class="btn  btn-lg px-4">
                         <i class="fas fa-user-plus me-2"></i>Get Started
                     </a>
                     {% endif %}
